<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:src="@drawable/amazon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="10dp"
        android:text="@string/sign_in" />


    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/show_password" />

    <Button
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#FFFFC107"
        android:textAllCaps="false"
        android:text="@string/sign_in" />

    <LinearLayout
        android:id="@+id/ll_new_account"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_margin="15dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >

        <View
            android:id="@+id/v_start_line_new_account"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.33"
            android:background="#808E8E8E" />

        <TextView
            android:id="@+id/tv_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_to_amazon" />

        <View
            android:id="@+id/v_end_line_new_account"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0.33"
            android:background="#808E8E8E"

         />

    </LinearLayout>

    <Button
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#F1F0EE"
        android:textAllCaps="false"
        android:text="@string/new_account" />


</LinearLayout>